@@ -12,8 +12,14 @@ context "Google's search page" do
     @browser.should_contain("rspec.rubyforge.org") # should_contain_text is RSpec sugar
   end
 
-  specify "should not find Ali G when I search for rspec" do
-    @browser.text_field(:name, "q").set("rspec")
+  specify "should find rspec's home page when I search for 'better than fudge' (will probably fail)" do
+    @browser.text_field(:name, "q").set("better than fudge")
+    @browser.button(:name, "btnG").click
+    @browser.should_contain("rspec.rubyforge.org")
+  end
+
+  specify "should not find Ali G when I search for respec" do
+    @browser.text_field(:name, "q").set("respec")
     @browser.button(:name, "btnG").click
     @browser.should_not_contain("Ali G")
   end
